<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/meet_black"
    android:visibility="visible">

    <TextView
        android:id="@+id/intro_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toBottomOf="@+id/intro_title"
        app:layout_constraintBottom_toTopOf="@+id/scan_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/QR_icon"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:src="@drawable/intro_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="80sp"
                    android:layout_marginEnd="10sp"
                    android:src="@drawable/user_email_icon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/edit_login"
                    app:layout_constraintTop_toBottomOf="@+id/QR_icon" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_weight="2"
                    android:layout_marginEnd="80sp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/QR_icon" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/password_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="30sp"
                    android:layout_marginStart="80sp"
                    android:layout_marginEnd="10sp"
                    android:src="@drawable/password_icon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/edit_password"
                    app:layout_constraintTop_toBottomOf="@+id/email_icon" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:layout_weight="2"
                    android:inputType="textPassword"
                    android:layout_marginEnd="80sp"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/enter_view"
                    android:layout_width="70sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:layout_weight="2"
                    android:layout_marginStart="80sp"
                    android:clickable="true"
                    android:text="@string/enter"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintRight_toLeftOf="@id/register_view"
                    app:layout_constraintTop_toBottomOf="@+id/password_icon" />

                <TextView
                    android:id="@+id/register_view"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:layout_marginEnd="50sp"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toRightOf="@id/enter_view"
                    app:layout_constraintTop_toBottomOf="@+id/password_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/forgot_password"/>

                <TextView
                    android:layout_marginTop="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_by"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google_icon"
                    android:layout_weight="6"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gmail_icon"
                    android:layout_weight="6"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/scan_button"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:background="@android:drawable/btn_default"
        android:text="@string/scan"
        android:textSize="30sp"
        android:onClick="qrRead"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>