<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/meet_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewGuest">

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/create_user_icon"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toBottomOf="@+id/main_icon"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="50sp"
                android:layout_height="70sp"
                android:layout_marginTop="30sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:src="@drawable/user_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/admin_name"
                app:layout_constraintTop_toBottomOf="@+id/password_icon" />

            <EditText
                android:id="@+id/guest_name_input"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:layout_marginTop="30sp"
                android:autofillHints="text"
                android:inputType="text"
                android:layout_marginEnd="20sp"
                android:hint="@string/full_admin_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="50sp"
                android:layout_height="70sp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:src="@drawable/user_email_icon" />

            <EditText
                android:id="@+id/guest_email_input"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="50sp"
                android:layout_height="70sp"
                android:layout_marginTop="30sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:src="@drawable/phone_number_black_icon" />

            <EditText
                android:id="@+id/guest_phone_input"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:layout_marginTop="20sp"
                android:autofillHints="password"
                android:inputType="phone"
                android:layout_marginEnd="20sp"
                android:hint="@string/phone_number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/add_guest_click"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:alpha="0.9"
        android:text="@string/add_guest"
        android:background="@android:drawable/btn_default"
        android:textSize="25sp"
        android:onClick="addGuestClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>